fix screen overflow

--- a/app/src/design-system/styles/main.css
+++ b/app/src/design-system/styles/main.css
@@ -83,7 +83,7 @@
 
   #app {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 1px);
   }
 
   body {
